src/test/ui/error-codes/E0090.stderr
error[E0090]: too few lifetime parameters provided: expected 2 lifetime parameters, found 1 lifetime parameter
  --> $DIR/E0090.rs:14:5
   |
LL |     foo::<'static>(); //~ ERROR expected 2 lifetime parameters, found 1 lifetime parameter [E0090]
   |     ^^^^^^^^^^^^^^ expected 2 lifetime parameters

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0090"
